'fixed text overflow'

--- a/assets/css/nutritionStyle.css
+++ b/assets/css/nutritionStyle.css
@@ -94,9 +94,7 @@ fieldset label {
     margin: 0;
 }
 
-/* .card-content p {
-    overflow: auto;
-} */
+
 
 .quote {
     font-size: 20px;
